--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
+    "js-md5": "^0.7.3",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.0.16",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@headlessui/vue": "^1.6.5",
