--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "js-md5": "^0.7.3",
+    "moment": "^2.29.4",
     "vue": "^3.2.37",
+    "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.16",
+    "vuejs-paginate-next": "^1.0.2",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
