--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "crypto-js": "^4.1.1",
     "js-md5": "^0.7.3",
     "moment": "^2.29.4",
+    "swiper": "^8.3.2",
     "vue": "^3.2.37",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.16",
