--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "crypto-js": "^4.1.1",
     "js-md5": "^0.7.3",
     "moment": "^2.29.4",
-    "swiper": "^8.3.2",
     "vue": "^3.2.37",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.16",
+    "vue-sweetalert2": "^5.0.5",
     "vuejs-paginate-next": "^1.0.2",
     "vuex": "^4.0.2"
   },
